# taichi-correct

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: basic_correction.py
taichi_correct/: __init__.py  error_correction.py
tests/: test_correction.py
